--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Extract Node.js version from .npmrc
-        id: node_version
-        run: |
-          node_version=$(grep -oP 'node\s*=\s*\K\S+' .npmrc)
-          echo "NODE_VERSION=$node_version" >> $GITHUB_ENV
+      # - name: Extract Node.js version from .npmrc
+      #   id: node_version
+      #   run: |
+      #     node_version=$(grep -oP 'node\s*=\s*\K\S+' .npmrc)
+      #     echo "NODE_VERSION=$node_version" >> $GITHUB_ENV
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version-file: .npmrc
+          # node-version: ${{ env.NODE_VERSION }}
       - name: Cache pnpm installation
         uses: actions/cache@v3
         with:
